# Tanks

./: .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  GenerateVSProject.bat  GenerateXcodeProject.sh
app/: CMakeLists.txt  unity.conf
app/assets/maps/: L_Simple.json
app/assets/materials/: M_LitFlatColor.json  M_Tank.json
app/assets/models/: cube.fbx  tank.fbx  turret.fbx
app/assets/prefabs/: player.json
app/assets/scenes/: new_scene.json
app/src/: Signals.h  TanksApplication.cpp  TanksApplication.h  TemplateApplication.cpp  TemplateApplication.h  main.cpp
app/src/components/: PlayerComponent.h
app/src/systems/: PlayerInputSystem.cpp  PlayerInputSystem.h  PlayerMovementSystem.cpp  PlayerMovementSystem.h
